Fixed Song page
